// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleInput renders a checkbox input type 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0!important;
}

.emotion-1>div {
  width: auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-3 {
  border-color: var(--themeBorder, #DADDE2);
  background-color: var(--themeBgPrimary, #FFFFFF);
  border-style: solid;
  border-width: 1px;
  height: 14px;
  width: 14px;
  border-radius: 4px;
  position: relative;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
}

<ForwardRef
  appearance="standard"
  id="defaultId"
  inputLabel="Sample label"
  inputType="checkbox"
  showInputLabel={true}
  value="default"
  vertAlign="center"
>
  <FormFieldWrapper
    id="defaultId"
  >
    <div
      className="emotion-0"
      data-cy="checkboxInput"
    >
      <label
        className="emotion-1"
        htmlFor="defaultId"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <input
              aria-describedby=""
              aria-invalid={false}
              className="emotion-4"
              data-cy="checkboxInput-input"
              id="defaultId"
              onBlur={[Function]}
              onFocus={[Function]}
              type="checkbox"
              value="default"
            />
          </div>
        </div>
        <div
          className="emotion-5"
        >
          Sample label
        </div>
      </label>
    </div>
  </FormFieldWrapper>
</ForwardRef>
`;

exports[`ToggleInput renders a radio input type 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0!important;
}

.emotion-1>div {
  width: auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-3 {
  border-color: var(--themeBorder, #DADDE2);
  background-color: var(--themeBgPrimary, #FFFFFF);
  border-style: solid;
  border-width: 1px;
  height: 14px;
  width: 14px;
  border-radius: 999px;
  position: relative;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
}

<ForwardRef
  appearance="standard"
  id="defaultId"
  inputLabel="Sample label"
  inputType="radio"
  showInputLabel={true}
  value="default"
  vertAlign="center"
>
  <FormFieldWrapper
    id="defaultId"
  >
    <div
      className="emotion-0"
      data-cy="radioInput"
    >
      <label
        className="emotion-1"
        htmlFor="defaultId"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <input
              aria-describedby=""
              aria-invalid={false}
              className="emotion-4"
              data-cy="radioInput-input"
              id="defaultId"
              onBlur={[Function]}
              onFocus={[Function]}
              type="radio"
              value="default"
            />
          </div>
        </div>
        <div
          className="emotion-5"
        >
          Sample label
        </div>
      </label>
    </div>
  </FormFieldWrapper>
</ForwardRef>
`;

exports[`ToggleInput renders all appearances 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0!important;
}

.emotion-1>div {
  width: auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-3 {
  border-color: var(--themeBorder, #DADDE2);
  background-color: var(--themeBgPrimary, #FFFFFF);
  border-style: solid;
  border-width: 1px;
  height: 14px;
  width: 14px;
  border-radius: 4px;
  position: relative;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
}

<ForwardRef
  appearance="standard"
  id="defaultId"
  inputLabel="Sample label"
  inputType="checkbox"
  showInputLabel={true}
  value="default"
  vertAlign="center"
>
  <FormFieldWrapper
    id="defaultId"
  >
    <div
      className="emotion-0"
      data-cy="checkboxInput"
    >
      <label
        className="emotion-1"
        htmlFor="defaultId"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <input
              aria-describedby=""
              aria-invalid={false}
              className="emotion-4"
              data-cy="checkboxInput-input"
              id="defaultId"
              onBlur={[Function]}
              onFocus={[Function]}
              type="checkbox"
              value="default"
            />
          </div>
        </div>
        <div
          className="emotion-5"
        >
          Sample label
        </div>
      </label>
    </div>
  </FormFieldWrapper>
</ForwardRef>
`;

exports[`ToggleInput renders all appearances 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0!important;
}

.emotion-1>div {
  width: auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-3 {
  border-color: var(--themeBorder, #DADDE2);
  background-color: var(--themeBgPrimary, #FFFFFF);
  border-style: solid;
  border-width: 1px;
  height: 14px;
  width: 14px;
  border-radius: 4px;
  position: relative;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
  color: var(--themeError, #EB293A);
  fill: var(--themeError, #EB293A);
}

<ForwardRef
  appearance="error"
  id="defaultId"
  inputLabel="Sample label"
  inputType="checkbox"
  showInputLabel={true}
  value="default"
  vertAlign="center"
>
  <FormFieldWrapper
    id="defaultId"
  >
    <div
      className="emotion-0"
      data-cy="checkboxInput checkboxInput.error"
    >
      <label
        className="emotion-1"
        htmlFor="defaultId"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <input
              aria-describedby=""
              aria-invalid={false}
              className="emotion-4"
              data-cy="checkboxInput-input checkboxInput-input.error"
              id="defaultId"
              onBlur={[Function]}
              onFocus={[Function]}
              type="checkbox"
              value="default"
            />
          </div>
        </div>
        <div
          className="emotion-5"
        >
          Sample label
        </div>
      </label>
    </div>
  </FormFieldWrapper>
</ForwardRef>
`;

exports[`ToggleInput renders all appearances 3`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: auto;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-bottom: 0!important;
}

.emotion-1>div {
  width: auto;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-3 {
  border-color: var(--themeBorder, #DADDE2);
  background-color: var(--themeBgPrimary, #FFFFFF);
  border-style: solid;
  border-width: 1px;
  height: 14px;
  width: 14px;
  border-radius: 4px;
  position: relative;
}

.emotion-4 {
  border: 0;
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-5 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
  color: var(--themeSuccess, #14C684);
  fill: var(--themeSuccess, #14C684);
}

<ForwardRef
  appearance="success"
  id="defaultId"
  inputLabel="Sample label"
  inputType="checkbox"
  showInputLabel={true}
  value="default"
  vertAlign="center"
>
  <FormFieldWrapper
    id="defaultId"
  >
    <div
      className="emotion-0"
      data-cy="checkboxInput checkboxInput.success"
    >
      <label
        className="emotion-1"
        htmlFor="defaultId"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-3"
          >
            <input
              aria-describedby=""
              aria-invalid={false}
              className="emotion-4"
              data-cy="checkboxInput-input checkboxInput-input.success"
              id="defaultId"
              onBlur={[Function]}
              onFocus={[Function]}
              type="checkbox"
              value="default"
            />
          </div>
        </div>
        <div
          className="emotion-5"
        >
          Sample label
        </div>
      </label>
    </div>
  </FormFieldWrapper>
</ForwardRef>
`;
